--- a/templates/ajax/soul/me.html.twig
+++ b/templates/ajax/soul/me.html.twig
@@ -27,6 +27,8 @@
         </div>
         <div class="cell rw-5 rw-sm-12 center">
             {% include 'ajax/soul/distinctions.html.twig' with {pictos: pictos, points: points, user: app.user} %}
+            <br />
+            <a href="#" class="small" x-ajax-href="{{ path('soul_pictos_all', {id: app.user.id}) }}" >{{ 'Details'|trans({},'soul') }}</a>
         </div>
         <div class="cell padded rw-7 rw-sm-12">
 
