Translations ; Fix town logs display: Disposals, TypeCrimes

--- a/assets/less/modules/log.less
+++ b/assets/less/modules/log.less
@@ -46,7 +46,7 @@
       &.log-entry-class-5 { background-color: #b05502; }
 
       &.log-entry-type-0  {}
-      &.log-entry-type-1  {}
+      &.log-entry-type-1  { &:before { background: url("../../img/log/citizen.gif") } }
       &.log-entry-type-2  { &.log-entry-class-0:before { background: url("../../img/log/bank_in.gif") } &.log-entry-class-1:before { background: url("../../img/log/bank_out.gif") } }
       &.log-entry-type-3  {}
       &.log-entry-type-4  { &:before { background: url("../../img/log/build.gif") } }
