--- a/templates/ajax/game/actions.html.twig
+++ b/templates/ajax/game/actions.html.twig
@@ -1,9 +1,6 @@
 {% if scout is not defined %}
     {% set scout = false %}
 {% endif %}
-{% if active_scout_mode is not defined %}
-    {% set active_scout_mode = false %}
-{% endif %}
 {% if hidden is not defined %}
     {% set hidden = false %}
 {% endif %}
@@ -42,7 +39,7 @@
             <button x-item-action-toggle="1" class="mb-1">
                 <img src="{{ asset('build/images/item/item_bag.gif') }}" alt="">
                 {{ 'Gegenstand verwenden'|trans({},'items')  }}
-                {% if (active_scout_mode) %}
+                {% if scout %}
                     <img class="icon right" alt="" src="{{ asset('build/images/icons/small_stealthy.gif') }}" />
                 {% endif %}
             </button>
@@ -53,7 +50,7 @@
                 {% for entry in item_action_list %}
                     <li class="action" {% if entry.crossed %}disabled{% elseif entry.targets is null %}x-action-id="{{ entry.id }}" {% if entry.action.confirm %}x-action-confirm="1"{% endif %} x-provoking-id="{{ entry.item.id }}"{% else %}x-target-definition="{{ entry.id }}--{{ entry.item.id }}"{% endif %}>
                         <img src="{{ asset('build/images/item/item_' ~ entry.item.prototype.icon ~ '.gif') }}" alt="{{ entry.item.prototype.label|trans({},'items') }}">
-                        {% if active_scout_mode and entry.action.keepsCover %}
+                        {% if scout and entry.action.keepsCover %}
                             <img class="float-right" src="{{ asset('build/images/icons/small_stealthy.gif') }}" alt="">
                         {% endif %}
                         <span>{{ '{action}: {item}'|trans({'{action}': entry.action.label|trans({},'items')|e('html'), '{item}': '<b>' ~ entry.item.prototype.label|trans({},'items')|e('html') ~ '</b>'},'items')|raw }}</span>
@@ -183,7 +180,7 @@
     {% if heroic_action_list is defined and heroic_action_list|length > 0 %}
         <button x-heroic-toggle="1" class="mb-1"><img src="{{ asset('build/images/icons/star.gif') }}" alt="">
             {{ 'Heldentaten'|trans({},'items') }}
-            {% if (active_scout_mode) %}
+            {% if scout %}
                 <img class="icon right" alt="" src="{{ asset('build/images/icons/small_stealthy.gif') }}" />
             {% endif %}
         </button>
@@ -195,7 +192,7 @@
             {% for entry in heroic_action_list %}
                 <li class="heroic_action {% if entry.used is defined and entry.used %}already{% endif %}"  {% if entry.crossed %}disabled{% elseif entry.targets is null %}x-action-id="{{ entry.id }}" x-action-confirm="1" {% else %}x-target-definition="{{ entry.id }}--hero"{% endif %}>
                     <img src="{{ asset('build/images/icons/tickOff.gif') }}" alt="">
-                    {% if active_scout_mode and entry.action.keepsCover %}
+                    {% if scout and entry.action.keepsCover %}
                         <img class="float-right" src="{{ asset('build/images/icons/small_stealthy.gif') }}" alt="">
                     {% endif %}
                     <span class="label"><b>{{ entry.action.label|trans({},'items') }}</b></span>
