--- a/templates/ajax/game/town/watchtower.html.twig
+++ b/templates/ajax/game/town/watchtower.html.twig
@@ -37,21 +37,24 @@
         <div class="row">
             <div class="padded cell rw-12 center small">
                 {% if z0[4] < 100 %}
-                <div class="watchtower-prediction">
+                    <div class="watchtower-prediction">
+                        {% if z0[5] is not null %}
+                            <div class="note note-critical" style="border: none">{{ z0[5]|trans({},'game') }}</div>
+                        {% endif %}
+                        <p>{{ 'Qualität der Abschätzung'|trans({},'game') }}</p>
+                        <div class="watchtower-prediction-bar">
+                            <div class="watchtower-prediction-progress" style="width: {{ z0[4] }}%;"></div>
+                            <div class="watchtower-prediction-text" style="width: {{ z0[4] }}%;">{{ z0[4] }}%</div>
+                            <div class="tooltip help">
+                                {{ 'Jeder Bürger, der herkommt, um den Horizont abzusuchen, kann die Qualität der Abschätzung verbessern.'|trans({}, 'game') }}
+                            </div>
+                        </div>
+                    </div>
+                {% else %}
                     {% if z0[5] is not null %}
                         <div class="note note-critical" style="border: none">{{ z0[5]|trans({},'game') }}</div>
                     {% endif %}
-                    <p>{{ 'Qualität der Abschätzung'|trans({},'game') }}</p>
-                    <div class="watchtower-prediction-bar">
-                        <div class="watchtower-prediction-progress" style="width: {{ z0[4] }}%;"></div>
-                        <div class="watchtower-prediction-text" style="width: {{ z0[4] }}%;">{{ z0[4] }}%</div>
-                        <div class="tooltip help">
-                            {{ 'Jeder Bürger, der herkommt, um den Horizont abzusuchen, kann die Qualität der Abschätzung verbessern.'|trans({}, 'game') }}
-                        </div>
-                    </div>
-                </div>
-                {% else %}
-                <p>{{ 'Das ist die bestmögliche Schätzung, die wir für diesen Angriff abgeben konnten.'|trans({}, 'game') }}</p>
+                    <p>{{ 'Das ist die bestmögliche Schätzung, die wir für diesen Angriff abgeben konnten.'|trans({}, 'game') }}</p>
                 {% endif %}
             </div>
         </div>
