--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -662,7 +662,7 @@ button, *.button, *.modal-button {
   }
 
   &.bigbutton {
-    background: url(../img/background/bg_big_button.gif) center no-repeat; width: 268px; height: 47px; display: inline-block;
+    background: url(../img/background/bg_big_button.gif) center no-repeat; min-width: 100px; max-width: 268px; min-height: 47px; display: inline-block;
     border: none; text-align: center; font-size: 1.1em; position: relative;
     &>* {position: relative; }
     &:active {
