--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -506,7 +506,7 @@ footer {
   width: @myhordes-content-width;
   overflow: visible;
   font-size: 1.1rem;
-  .cell-small > div, .cell > div {
+  .cell-small.footer > div, .cell.footer > div {
     background: rgba(0,0,0,0.33);
     margin-bottom: 5px;
     strong {
