Adjustments for mobile

--- a/templates/web/framework.html.twig
+++ b/templates/web/framework.html.twig
@@ -95,7 +95,7 @@
     {% block footer %}
         {% if debug %}
             <div class="row">
-                <div class="cell rw-5 ro-7">
+                <div class="cell rw-5 ro-7 rw-md-6 ro-md-6 rw-sm-12 ro-sm-0">
                     <div class="debug_info row-flex content-center-vertical">
                         <div class="padded-small cell grow-1">
                             <i class="fa fa-exclamation-triangle"></i> <b>BETA VERSION</b>
