--- a/templates/ajax/ghost/create_town.html.twig
+++ b/templates/ajax/ghost/create_town.html.twig
@@ -177,7 +177,7 @@
                                 <option value="none" title="{{'Keine Spezialregeln'|trans({}, 'ghost')}}" selected>{{'Keine'|trans({}, 'ghost')}}</option>
                                 <option value="nobuilding" title="{{'Kein Gebäude ist zu Beginn freigeschaltet. Alle müssen in der Aussenwelt gefunden werden!'|trans({}, 'ghost')}}">{{'Keine Startgebäude'|trans({}, 'ghost')}}</option>
                                 <option value="poison" title="{{'Jedes Essen und jede Droge, die du zu dir nimmst, birgt ein geringes Infektionsrisiko.'|trans({}, 'ghost')}}">{{'Kontaminierte Zone'|trans({}, 'ghost')}}</option>
-                                <option value="nobeta" title="{{'Betapropin steht nicht zur Verfügung.'|trans({}, 'ghost')}}">{{'Beta-Funktionen deaktivieren'|trans({}, 'ghost')}}</option>
+                                <option value="beta" title="{{'Jeder Spieler erhält 1x Betapropin beim Start der Stadt.'|trans({}, 'ghost')}}">{{'Beta-Funktionen aktivieren'|trans({}, 'ghost')}}</option>
                             </select>
                         </div>
                     </div>
