--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -215,6 +215,12 @@
                                     {{ 'Glücklicherweise kannst du dich dank deines {img_scout} <strong>Tarnanzug</strong> unerkannt weiterbewegen.'|trans({'{img_scout}': '<img alt="" src="' ~ asset('build/images/item/item_vest_on.gif') ~ '" />'},'game')|raw }}
                                     {{ 'Achtung: Jede Aktion in der Zone sorgt dafür, dass deine <strong>Tarnung auffliegt</strong>. (Es können nur Aktionen ausgeführt werden, die mit einem Icon {img_scout_ok} gekennzeichnet sind)!'|trans({'{img_scout_ok}': '<img alt="" src="' ~ asset('build/images/icons/small_stealthy.gif') ~ '" />'},'game')|raw }}
                                 {% endif %}
+                            {% elseif zone_escape_desperate > 0 %}
+                                <br />
+                                {% trans from 'game' %}
+                                    Du hast es geschafft, dich aus dieser Gefahr zu befreien, aber die Zombies schauen dich jetzt hungrig an und kommen gefährlich knurrend auf dich zu... FLIEHE!
+                                {% endtrans %}
+                                <span x-countdown="{{ zone_escape_desperate }}" x-on-expire="reload">...</span>
                             {% elseif active_scout_mode %}
                                 <br />
                                 {{ 'Mit deinem {img_scout} <strong>Tarnanzug</strong> kannst du dich bewegen ohne dabei entdeckt zu werden.'|trans({'{img_scout}': '<img alt="" src="' ~ asset('build/images/item/item_vest_on.gif') ~ '" />'},'game')|raw }}
@@ -225,7 +231,7 @@
                                 {% endtrans %}
                             {% endif %}
                         </span>
-                        {% if zone_escape <= 0 and not active_scout_mode %}
+                        {% if zone_escape <= 0 and zone_escape_desperate <= 0 and not active_scout_mode %}
                             <div class="row">
                                 <div class="padded-small cell rw-6">
                                     <button x-ajax-href="{{ url('forum_town_redirect') }}">
