--- a/templates/ajax/soul/me.html.twig
+++ b/templates/ajax/soul/me.html.twig
@@ -144,7 +144,7 @@
                                     </option>
                                 {% endif %}
                             {% endfor %}
-                            <!--<option value="-1">{{ 'Alte Städte'|trans({}, "soul") }}</option>-->
+                            <option value="-1">{{ 'Alte Städte'|trans({}, "soul") }}</option>
                             {% for season in seasons %}
                                 {% if season.number == 0 and season.subnumber <= 14 %}
                                     <option value="{{ season.id }}">
