--- a/templates/web/framework.html.twig
+++ b/templates/web/framework.html.twig
@@ -24,6 +24,7 @@
         <meta property="og:locale:alternate" content="fr_FR" />
         <meta property="og:locale:alternate" content="es_ES" />
         <meta property="og:locale:alternate" content="en_US" />
+        <meta property="og:image" content="{{ absolute_url(asset('build/images/myhordes-og.png')) }}" />
 
         <!-- Load CSS -->
         {{ encore_entry_link_tags('app') }}
