--- a/assets/less/modules/log.less
+++ b/assets/less/modules/log.less
@@ -7,6 +7,9 @@
     font-size: 1.2rem; color: @myhordes-cell-header-text-color; max-height: 300px; overflow-y: auto;
     &>.log-spinner, &>.log-complete-link { padding: 5px; }
     &>.log-complete-link { cursor: pointer; text-decoration: underline; display: inline-block; }
+    &>.log-silence {
+      margin: 6px; color: #a0b07a; font-weight: bold;
+    }
     &>.log-entry {
       &:before { content: " "; height: 16px; width: 16px; top: 2px; left: 2px; position: absolute; }
       padding: 2px 2px 2px 20px; position: relative; cursor: default; margin: 1px 0;
