--- a/templates/ajax/game/log_content.html.twig
+++ b/templates/ajax/game/log_content.html.twig
@@ -4,7 +4,7 @@
 {% else %}
     {% set last_entry = null %}
     {% for entry in entries %}
-        {% set time_diff_seconds = (last_entry is not null) ? (last_entry.timestamp.timestamp - entry.timestamp.timestamp) : 0 %}
+        {% set time_diff_seconds = (last_entry is not null) ? (last_entry.timestamp.timestamp - entry.timestamp.timestamp) : ('now'|date('U') - entry.timestamp.timestamp) %}
         {% if time_diff_seconds >= 7200 %}
             <div class="log-silence">{{ '(seit {num} Stunden herrscht völlige Flaute)'|trans({num: (time_diff_seconds/3600)|round(0,'floor')},'game') }}</div>
         {% elseif time_diff_seconds >= 3600 %}
