--- a/assets/less/modules/log.less
+++ b/assets/less/modules/log.less
@@ -8,7 +8,18 @@
     &>.log-spinner, &>.log-complete-link { padding: 5px; }
     &>.log-complete-link { cursor: pointer; text-decoration: underline; display: inline-block; }
     &>.log-silence {
-      margin: 6px; color: #a0b07a; font-weight: bold;
+      margin: 0px;
+      padding: 0px;
+      padding-top: 5px;
+      padding-bottom: 8px;
+      padding-left: 4px;
+      margin-top: 2px;
+      font-size: 8pt;
+      font-weight: bold;
+      color: #98a675;
+      text-transform: uppercase;
+      border: 0px;
+      border-top: 1px dashed #b37c4a;
     }
     &>.log-entry {
       &:before { content: " "; height: 16px; width: 16px; top: 2px; left: 2px; position: absolute; }
