Added css classes

--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -645,7 +645,7 @@
                                 {% endif %}
 
                                 {% if other_citizen.escortSettings.forceDirectReturn %}
-                                    <div class="padded cell rw-12">
+                                    <div class="padded cell rw-12 force-town">
                                         <span class="small">{{'Dieser Bürger möchte in die Stadt gebracht werden.'|trans({}, 'game')}}</span>
                                     </div>
                                 {% endif %}
